# mcp-utm

./: README.md  package.json  pyproject.toml
.github/workflows/: build-pkg.yml
src/mcp_utm/: __main__.py  applescript.py  server.py
tests/: test_applescript.py  test_server.py  test_validation.py
