[project]
name = "mcp-utm"
version = "0.1.0"
description = "MCP server for UTM virtual machine management via AppleScript"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9",
]

[project.scripts]
mcp-utm = "mcp_utm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_utm"]
