[project]
name = "mcp-utm"
version = "0.1.1"
description = "MCP server for UTM virtual machine management via AppleScript"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9",
]

[project.scripts]
mcp-utm = "mcp_utm.__main__:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_utm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
